# Textured-Obj-Renderer

./: .gitmodules  CMakeLists.txt  config.ini
src/: imagecache.cpp  imagecache.h  inireader.cpp  inireader.h  main.cpp  object.cpp  object.h  objloader.cpp  objloader.h
